# Mann.rs

./: .gitignore  Cargo.toml  README.md  license.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
RustMann/: Mann.py  Tensor.py  __init__.py
examples/: example_01_mann_spectra.py  example_02_generate_turbulence_boxes.py  example_03_box_spectra.py  example_04_serial_vs_parallel.py  example_05_constrained_turbulence.py  example_05_constrained_turbulence2.py  example_05_spectra_python_vs_rust.py
mannrs/: CLI.py  Constrained.py  Mann.py  Tensor.py  __init__.py
rustmann/: Mann.py  __init__.py
src/: lib.rs  python_interface.rs  spectra.rs  tensors.rs  tests.rs  utilities.rs
tests/: test_mannrs.py
