[package]
name = "rustmann"
version = "0.1.0"
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustmann"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
ndarray = { version = "0.15.4", features = ["rayon"] }
numpy = "0.15.0"
ndarray-rand = "0.14.0"
num = "0.4.0"
