[package]
name = "RustMann"
version = "0.2.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "RustMann"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
ndarray = { version = "0.15.4", features = ["rayon"] }
numpy = "0.15.0"
ndarray-rand = "0.14.0"
num = "0.4.0"
ndrustfft = "0.1.6"
ndarray-linalg = { version = "0.14.1", features = ["openblas-static"] }


[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]