[package]
name = "mannrs"
version = "1.2.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mannrs"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.21.1", features = ["extension-module"] }
ndarray = { version = "0.15.4", features = ["rayon"] }
numpy = "0.21.0"
ndarray-rand = "0.14.0"
num = "0.4.0"
ndrustfft = "0.1.6"


[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
