[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project.scripts]
mannrs = 'mannrs.CLI:CLI'


[project]
name = "mannrs"
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
readme = "README.md"
license = "license.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.19.2",
    "matplotlib>=3",
    "tqdm>=4",
    "pydantic>=1.9.0",
    "click>=6",
    "toml>=0.10.2",
]
