[project]
name = "mannrs"
version = "0.1.0"
description = "A Mann turbulence generator for Python written in Rust"
readme = "README.md"
authors = [
    { name = "Jaime Liew", email = "jaimeliew1@gmail.com" }
]
requires-python = ">=3.7"
dependencies = [
    "click>=8.0.4",
    "numpy>=1.21.6",
    "scipy>=1.5.4",
    "toml>=0.10.2",
    "tqdm>=4.64.1",
]

[project.scripts]
mannrs = "mannrs.CLI:CLI"

[tool.maturin]
python-packages = ["mannrs"]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
